# telescope_simulation_tool

./: CMakeLists.txt  LICENSE  README.md
models/: sphere.stl
src/: CMakeLists.txt  Raytracing.h
src/embree/: EmbreeLobsterEyeOptics.cpp  EmbreeLobsterEyeOptics.h  EmbreeScene.cpp  EmbreeScene.h  EmbreeWolter.cpp  EmbreeWolter.h
src/geometry/: Ray.cpp  Ray.h  Vec3fa.h
src/lib/: XMLData.cpp  XMLData.h  random.h
src/mirror_module/: EmbreeScene.cpp  EmbreeScene.h  LobsterEyeOptic.cpp  LobsterEyeOptic.h  LobsterEyeOptics.cpp  LobsterEyeOptics.h  MirrorModule.cpp  MirrorModule.h  Wolter.cpp  Wolter.h
src/sensor/: Sensor.cpp  Sensor.h
src/shape/: Hyperboloid.cpp  Hyperboloid.h  MicroPoreOptics.cpp  MicroPoreOptics.h  OpticalMesh.cpp  OpticalMesh.h  Paraboloid.cpp  Paraboloid.h  Plane.cpp  Plane.h  Pore.cpp  Pore.h  Shape.cpp  Shape.h  Spider.cpp  Spider.h
src/surface/: Dummy.cpp  Dummy.h  GaussSurface.cpp  GaussSurface.h  Microfacet.cpp  Microfacet.h  SurfaceModel.cpp  SurfaceModel.h  SurfaceStrategy.cpp  SurfaceStrategy.h
tools_raytracing/: CMakeLists.txt  raytracing.cpp  theseus.xml  wolter.xml
tools_raytracing/python/: arf_comparison.py  arf_smoothing.py  calculate_arf.py  detailed_ray_tracer.py  displayer.py  displayer_2d.py  heatmap.py  heatmap_lobster.py  heatmap_lobster_reflection.py  heatmap_lobster_subtraction.py  heatmap_lobster_surface_distribution.py  heatmap_new.py  histogram_lobster_2D.py  lobster_runtime.py  moving_around_gif.py  outer_rays_sensor_hist.py  photon_list_analysis.py  ray_animation.py  read_psf_pixels.py  read_psf_simulation.py  render.py  runtime.py  score_psfs.py  shell_analysis.py  shell_analysis_highlights.py  simulation_suite.py  sort_list.py  vignetting.py
